--- a/Travel Partner/app/src/main/res/layout/activity_home.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_home.xml
@@ -25,22 +25,21 @@
             android:layout_marginStart="10dp"
             android:layout_marginBottom="0dp"
             android:fontFamily="@font/roboto"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="16sp" />
 
         <Button
             android:id="@+id/button_login"
             android:layout_width="112dp"
             android:layout_height="50dp"
-
+            android:layout_marginEnd="10dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="290dp"
+            android:layout_marginStart="275dp"
             android:layout_marginBottom="0dp"
             android:fontFamily="@font/roboto"
-            android:text="Log in"
+            android:text="@string/log_in"
             android:textSize="16sp" />
-
     </com.denzcoskun.imageslider.ImageSlider>
 
 </LinearLayout>
