--- a/Travel Partner/app/src/main/res/layout/fragment_search.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_search.xml
@@ -1,14 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/suggestions"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/roboto"
+        android:text="Suggestions"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:id="@+id/bar"
+        android:layout_height="2dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/lightGrey"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/search" />
+        android:layout_below="@+id/container">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/whole_suggestion_tab"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="140dp"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Example1"
+        android:textStyle="bold"
+        android:id="@+id/name"
+        android:textColor="@color/search"
+        android:textSize="18sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/destination_date"
+            android:layout_height="wrap_content"
+            android:text="Destination:"
+            android:textStyle="bold"
+            android:textColor="@color/search"
+            android:textSize="18sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/plan"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/profile_text"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+    </LinearLayout>
+    </LinearLayout>
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/view_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="250dp"
+        android:textColor="@color/search"
+        android:backgroundTint = "@color/white"
+        android:text="View Profile" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/search"
+        android:text="next" />
 
 </FrameLayout>
+</layout>
