--- a/Travel Partner/app/src/main/res/layout/fragment_trips3.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips3.xml
@@ -36,7 +36,8 @@
 
     <EditText
         android:autofillHints="@string/all"
-        android:inputType="text"
+        android:inputType="none"
+        android:enabled="false"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -54,7 +55,8 @@
 
 
     <EditText
-        android:inputType="text"
+        android:inputType="none"
+        android:enabled="false"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -72,7 +74,8 @@
         />
 
     <EditText
-        android:inputType="text"
+        android:inputType="none"
+        android:enabled="false"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -90,10 +93,11 @@
         />
 
     <EditText
-        android:inputType="text"
+        android:inputType="none"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
+        android:enabled="false"
         android:layout_marginTop="245dp"
         android:id="@+id/other"
         android:hint="@string/other"
@@ -115,43 +119,40 @@
         android:layout_marginStart="30dp"
         android:textSize="14sp"
         android:fontFamily="@font/roboto"
-        android:text="@string/age"
+        android:text="Preferred Age"
         android:id="@+id/ageText"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:inputType="text"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:layout_marginStart="85dp"
+        android:gravity="center_horizontal"
         android:layout_marginTop="345dp"
-        android:layout_marginStart="30dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/_0"
-        android:id="@+id/minimumAge"/>
+        android:id="@+id/minimumAge"
+        android:hint="0"
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_marginTop="345dp"
-        android:layout_marginStart="350dp"
-        android:textSize="14sp"
+        android:layout_marginTop="355dp"
+        android:layout_marginStart="195dp"
+        android:textSize="18sp"
         android:fontFamily="@font/roboto"
-        android:text="@string/_100"
-        android:id="@+id/maximumAge"/>
+        android:text="to"/>
 
-    <SeekBar
-        android:id="@+id/ageSeekBar"
-        android:layout_width="match_parent"
+    <EditText
+        android:inputType="text"
+        android:gravity="center_horizontal"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:min="0"
-        android:max="100"
-        android:progress="20"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="375dp"
-        android:thumbTint="@color/trip"
-        android:progressTint="@color/trip"/>
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="345dp"
+        android:id="@+id/maximumAge"
+        android:hint="100"
+        android:textSize="15sp"/>
 
     <Button
         android:id="@+id/previous_button"
@@ -162,7 +163,7 @@
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="450dp"
         android:layout_marginRight="-10dp"
         android:layout_marginLeft="-140dp"
         android:backgroundTint="@color/lightGrey"
@@ -178,13 +179,11 @@
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="450dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="100dp"
         android:background="@drawable/create_trip_button"
         />
-
-
 
 
 </FrameLayout>
