--- a/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
@@ -61,7 +61,7 @@
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="450dp"
         android:layout_marginRight="-10dp"
         android:layout_marginLeft="-140dp"
         android:backgroundTint="@color/lightGrey"
@@ -77,7 +77,8 @@
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="100dp"
         android:background="@drawable/create_trip_button"
